--- a/great-idea/index.html
+++ b/great-idea/index.html
@@ -16,8 +16,76 @@
 
   <body>
 
-    <!-- Copy and paste your HTML from the first UI project here -->
-      
-    
+
+  <title>Great Idea!</title>
+
+  <!--[if lt IE 9]>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.js"></script>
+  <![endif]-->
+    <header>
+    <div class="container-everything">
+        <div class="container">
+<nav>
+  <a href="services.html">Services</a>
+  <a href="#">Product</a>
+  <a href="#">Vision</a>
+  <a href="#">Features</a>
+  <a href="#">About</a>
+  <a href="#">Contact</a>
+</nav>
+  <img class="logo" src="img/logo.png" alt="Great Idea! Company logo.">
+</div>
+<section class="header-1">
+    <div class="left-header">
+  <h1>Innovation<br>
+  On<br>
+  Demand</h1>
+
+  <a href="a" class="cta-button" style="button">Get Started</a>
+</div>
+<div class="container2">
+  <img src="img/header-img.png" alt="Image of a code snippet.">
+</div>
+</header>
+  <div class="container-feature-about">
+  <h2>Features</h2>
+  <p>Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.</p>
+
+
+  <h2>About</h2>
+  <p>Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.</p>
+<br>
+  <hr> 
+<br> 
+</div>
+  <img class="middle-img" src="img/mid-page-accent.jpg" alt="Image of code snippets across the screen">
+  
+<div class="container-services-product-vision">
+  <h2>Services</h2>
+  <p>Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.</p>
+
+
+  <h2>Product</h2>
+  <p>Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.</p>
+
+  <h2>Vision</h2>
+  <p>Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.</p>
+</div>
+<br> 
+<hr>
+<br> 
+  <footer>
+  <address>
+  Contact<br>
+  123 Way 456 Street<br>
+  Somewhere, USA<br><br>
+  1 (888) 888-8888<br><br>
+  sales@greatidea.io
+</address>
+</footer>
+<div id="copyright">
+  Copyright Great Idea! 2018
+</div>
+</div>
   </body>
 </html>
